--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -57,9 +57,17 @@ header {
   header {
     height: 60vh;
   }
-
+  .text-light {
+    font-size: medium;
+  }
   .header__socials,
   .scroll__down {
     display: none;
+  }
+  .header__container {
+    text-align: center;
+    height: 100%;
+    position: relative;
+    font-size: medium;
   }
 }
